@@ -1,3 +1,5 @@
+* directly depend on the lmfit package for implementation of our fitting
+  models.
 * more possibilities to specify filename lists in getras_scan, getSeifert_map,
   and getxrdml_scan
 * allow bytes-stream instead of filename in XRDML
